fix: get my wardrobe api metadata
